# kira

./: LICENSE  README.md  README.ru.md  pyproject.toml
kira/: agent.py  app.py  listen.py  main.py  speech.py  tools.py
